Amost working. Connection reset problem.